Update users authentication and openapi specification
